Add new changes in my app✅

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="container">
             <header>
                 <div class="container-nav">
-                    <h1>ED</h1>
+                    <h1>ER</h1>
                     <nav class="" id="nav">
                         <ul class="" id="links">
                             <li> <a  href="#inicio">INICIO</a></li>
@@ -32,14 +32,14 @@
 
                     <!-- ICONOS DE LAS REDES SOCIALES -->
                     <div class="redes">
-                        <a href="https://www.linkedin.com/in/edisson-osorio-41858b247/"><i class="fa-brands fa-linkedin"></i></a>
-                        <a href="https://github.com/edisson11osorio"><i class="fa-brands fa-github"></i></a>
+                        <a href="https://www.linkedin.com/in/edisson-rodr%C3%ADguez-41858b247/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+                        <a href="https://github.com/edisson11osorio" target="_blank"><i class="fa-brands fa-github"></i></a>
                     </div>
                 </div>
             </header>
             <div class="presentation">
                 <p class="welcome">Bienvenidos</p>
-                <h2>Soy <span>Edisson Osorio</span>, Desarrollador web</h2>
+                <h2>Soy <span>Edisson Rodriguez</span>, Webmaster</h2>
                 <p class="description">
                 </p>
                 <a href="#portfolio">Ir a Portafolio</a>
@@ -55,8 +55,7 @@
             <p class="title-section">Sobre mi</p>
             <h2>Hola, soy <span>Edisson Osorio</span></h2>
             <h3>Desarollador web</h3>
-            <p>¡La creacion de sitios web ha cambiado mi mundo. No se trata solo de  Aprender a codificar me dio habilidades para resolver problemas y una forma de comunicarme con otros a nivel técnico. También puedo desarrollar sitios web y usar mis habilidades de codificación para conseguir un mejor trabajo. Y lo aprendí todo en SoloLearn, donde construyen tu autoestima ! </p>
-            <p></p>
+            <p>Soy un Webmaster y estudiante de ingeniería de software capaz de aplicar mis conocimientos en diversas áreas funcionales y en la programación de aplicaciones. baso mi trabajo en el trabajo en equipo, responsabilidad social, ética profesional, creatividad, liderazgo y una visión clara del proyecto para enfrentar los desafíos de manera eficiente en lo personal y profesional. </p>
             <a href="">Descargar CV</a>
         </div>
     </section>
@@ -66,17 +65,16 @@
         <div class="skill">
             <div class="info">
                 <p><span class="list"></span>Html & Css</p>
-                <span class="porcentaje">95%</span>
+                <span class="porcentaje">90%</span>
             </div>
             <div class="barra">
                 <div id="html" class="barra-progreso1"></div>
             </div>
         </div>
-
         <div class="skill">
             <div class="info">
                 <p><span class="list"></span>JavaSript</p>
-                <span class="porcentaje">85%</span>
+                <span class="porcentaje">60%</span>
             </div>
             <div class="barra">
                 <div id="js" class="barra-progreso2"></div>
@@ -86,7 +84,7 @@
         <div class="skill">
             <div class="info">
                 <p><span class="list"></span>React</p>
-                <span class="porcentaje">75%</span>
+                <span class="porcentaje">50%</span>
             </div>
             <div class="barra">
                 <div id="react" class="barra-progreso3"></div>
@@ -94,14 +92,14 @@
         </div>
         <div class="skill">
             <div class="info">
-                <p><span class="list"></span>Git</p>
-                <span class="porcentaje">90%</span>
+                <p><span class="list"></span>Git/GitHub</p>
+                <span class="porcentaje">60%</span>
             </div>
             <div class="barra">
                 <div id="git" class="barra-progreso4"></div>
             </div>
         </div>
-        <div class="skill">
+        <!-- <div class="skill">
             <div class="info">
                 <p><span class="list"></span>Python</p>
                 <span class="porcentaje">70%</span>
@@ -109,24 +107,24 @@
             <div class="barra">
                 <div id="py" class="barra-progreso5"></div>
             </div>
-        </div>
+        </div> -->
         <div class="skill">
             <div class="info">
                 <p><span class="list"></span>C</p>
-                <span class="porcentaje">95%</span>
+                <span class="porcentaje">50%</span>
             </div>
             <div class="barra">
                 <div id="c" class="barra-progreso6"></div>
             </div>
         </div>
-        <div class="skill">
+        <!-- <div class="skill">
             <div class="info">
                 <p><span class="list"></span>SQL</p>
                 <span class="porcentaje">75%</span>
             </div>
             <div class="barra">
                 <div id="sql" class="barra-progreso7"></div>
-            </div>
+            </div> -->
         </div>
     </div>
 
@@ -162,14 +160,14 @@
         </div>
     </section>
    
-    <!-- SECTION-CONTACTO -->
+    <!-- SECTION-CONTACTO
     <section id="contacto">
         <h3 class="title-section">Contactanos ahora</h3>
         <div class="container-form">
             <form action="">
                 <div class="fila mitad">
                     <input type="text" placeholder="Nombre Completo" class="input-mitad">
-                    <input type="text" placeholder="Dirrecion de email" class="input-mitad"">
+                    <input type="text" placeholder="Direcion de email" class="input-mitad"">
                 </div>
                 <div class="fila">
                     <input type="text" placeholder="Tema..." class="input-full">
@@ -181,13 +179,13 @@
                 <input type="submit" value="Enviar Mensaje" class="btn-enviar">
             </form>
         </div>
-    </section>
+    </section> -->
     <!-- SECTION FOOTER -->
     <footer>
         <p>Todos los deechos reservados - 2022</p>
         <div class="redes">
-            <a href="https://www.linkedin.com/in/edisson-osorio-41858b247/"><i class="fa-brands fa-linkedin"></i></a>
-            <a href="https://github.com/edisson11osorio"><i class="fa-brands fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/edisson-rodr%C3%ADguez-41858b247/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="https://github.com/edisson11osorio" target="_blank"><i class="fa-brands fa-github"></i></a>
         </div>
     </footer>
     <script src="script.js"></script>
