--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                             <li> <a  href="#about-me">SOBRE MI</a></li>
                             <li> <a  href="#skills">HABILIDADES</a></li>
                             <li> <a  href="#portfolio">PORTAFOLIO</a></li>
-                            <li> <a  href="#contacto">CONTACTO</a></li>
+                            <li> <a  href="certificaciones.html">CERTIFICACIONES</a></li>
                         </ul>
                     </nav>
 
@@ -156,7 +156,10 @@
                     <!-- <p>Diseño web</p> -->
                 </div>
             </div>
-            
+        </div>
+        <br>
+        <div class="button-certificaiones">
+            <a href="certificaciones.html">Certificaciones</a>
         </div>
     </section>
    
@@ -182,7 +185,7 @@
     </section> -->
     <!-- SECTION FOOTER -->
     <footer>
-        <p>Todos los deechos reservados - 2022</p>
+        <p>Todos los deechos reservados - 2025</p>
         <div class="redes">
             <a href="https://www.linkedin.com/in/edisson-rodr%C3%ADguez-41858b247/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
             <a href="https://github.com/edisson11osorio" target="_blank"><i class="fa-brands fa-github"></i></a>
